[package]
name = "xtask"
edition = "2021"
authors = ["Andreas Waidler <lintermute@mailbox.org>"]
license = "MIT OR Apache-2.0"
version = "0.0.0"
publish = false

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
lazy_errors = "0.10.1"

[dev-dependencies]
test-case = { workspace = true }
